# tantivy-server

./: Cargo.toml
assets/swagger-ui/: index.html
docs/api/: api.swagger.yaml
src/: errors.rs  main.rs  server.rs  start.rs
src/api/: index.rs  mod.rs  status.rs
src/rest/: index.rs  status.rs
src/service/: mod.rs  service.rs
